<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.codetho.photocollage.ui.MainActivity">

    <item
        android:id="@+id/action_done"
        android:icon="@drawable/ic_share_white"
        android:title="@string/done"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add_white"
        android:title=""
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_ratio"
        android:icon="@drawable/ic_aspect_ratio"
        android:title="@string/layout_ration"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_action_help"
        android:title="@string/help"
        android:visible="true"
        app:showAsAction="ifRoom"/>
</menu>