<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/dialogSelectPhoto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#40000000"
              android:gravity="bottom"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_corners_rect"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/select"
            android:textColor="#8A8A8A"
            android:textSize="12sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#DADADE"/>

        <TextView
            android:id="@+id/cameraView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/camera"
            android:textColor="#007AFF"
            android:textSize="16sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#DADADE"/>

        <TextView
            android:id="@+id/libraryView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/photo_library"
            android:textColor="#007AFF"
            android:textSize="16sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#DADADE"/>

        <TextView
            android:id="@+id/stickerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/sticker"
            android:textColor="#007AFF"
            android:textSize="16sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#DADADE"/>

        <TextView
            android:id="@+id/alterBackgroundView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/alter_background"
            android:textColor="#007AFF"
            android:textSize="16sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#DADADE"/>

        <TextView
            android:id="@+id/borderShadowView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/border_shadow"
            android:textColor="#007AFF"
            android:textSize="16sp"
            android:visibility="gone"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#DADADE"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/borderColorView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/border_color"
            android:textColor="#007AFF"
            android:textSize="16sp"
            android:visibility="gone"/>
    </LinearLayout>

    <TextView
        android:id="@+id/cancelView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_corners_rect"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/cancel"
        android:textColor="#007AFF"
        android:textSize="16sp"/>

</LinearLayout>