<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="wisekey.photocollage.displayingbitmaps.ui.ImageGridActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title=""
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"
        android:visible="false"/>
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/done"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_show_progress"
        android:title=""
        android:visible="false"
        app:actionLayout="@layout/progress_action_bar"
        app:showAsAction="always"/>
    <group>
        <item
            android:id="@+id/action_sort_by_time"
            android:title="@string/sort_by_time"
            app:showAsAction="ifRoom"
            android:visible="false"/>
        <item
            android:id="@+id/action_sort_hot_items"
            android:title="@string/sort_by_hot_item"
            app:showAsAction="ifRoom"
            android:visible="false"/>
    </group>

</menu>