<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:orientation="vertical">

    <include
        android:id="@+id/toolbarLayout"
        layout="@layout/toolbar"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarLayout"
        android:layout_margin="10dp"
        android:gravity="top"
        android:maxHeight="150dp"
        android:hint="@string/text"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adsLayout"
        android:layout_below="@+id/editText"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/colorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners_rect"
            android:padding="10dp"
            android:text="@string/select_text_color"
            android:textColor="#3d3d3d"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/text_font"
            android:textColor="#3d3d3d"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/adsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"></FrameLayout>
</RelativeLayout>